--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+    <header class="searchbar wrapper">
+      <input type="search" id="searchInput" name="searchbar" placeholder="Search">
+    </header>
     <main class="flex wrapper">
       <a href="photos/01.jpg" data-lightbox="gallery" class="image" data-title="I love hay bales.">
         <img src="photos/thumbnails/01.jpg" alt="Hay Bales">
